--- a/VideoWall/templates/adminapp/base.html
+++ b/VideoWall/templates/adminapp/base.html
@@ -53,9 +53,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'adminapp:testplayer' %}">
+<!--              icon-->
+                <img src="{% static 'adminapp/images/caret-right.svg' %}" style="padding-right: 10px; ">
+<!--              end icon-->
               <span data-feather="shopping-cart"></span>
-              Products
+              Test Player
             </a>
           </li>
           <li class="nav-item">
